# tskg

./: .gitignore  README.md  pyproject.toml
src/tskg/: main.py
