[project]
name = "tskg"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver",email = "voltxge3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.4,<0.16.0)"
]

[tool.poetry]
packages = [{include = "tskg", from = "src"}]

[tool.poetry.scripts]
tskg = "tskg.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
